--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-react-css-modules": "^2.7.0",
+    "lodash": "^4.17.4",
     "prop-types": "^15.5.4",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
@@ -23,7 +25,6 @@
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
-    "babel-plugin-react-css-modules": "^2.6.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
