--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   "license": "ISC",
   "dependencies": {
     "babel-plugin-react-css-modules": "^2.7.0",
+    "fine-uploader": "^5.14.4",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.4",
     "react": "^15.5.3",
+    "react-addons-css-transition-group": "^15.5.2",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.5.3",
+    "react-fine-uploader": "^1.0.2",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "next",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
