--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "file-loader": "^0.11.2",
     "postcss-loader": "^1.3.3",
     "react-hot-loader": "3.0.0-beta.6",
     "style-loader": "^0.16.1",
