--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "babel-plugin-react-css-modules": "^2.7.0",
+    "bootstrap": "^3.3.7",
     "classnames": "^2.2.5",
     "fine-uploader": "^5.14.4",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.4",
     "react": "^15.5.3",
     "react-addons-css-transition-group": "^15.5.2",
+    "react-bootstrap": "^0.31.0",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.5.3",
     "react-fine-uploader": "^1.0.2",
@@ -25,6 +27,7 @@
     "react-router-dom": "^4.1.1",
     "react-router-redux": "next",
     "redux": "^3.6.0",
+    "redux-form": "^6.8.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
@@ -45,6 +48,7 @@
     "postcss-loader": "^1.3.3",
     "react-hot-loader": "3.0.0-beta.6",
     "style-loader": "^0.16.1",
+    "url-loader": "^0.5.9",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   },
