--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "babel-plugin-react-css-modules": "^2.7.0",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^3.3.7",
     "classnames": "^2.2.5",
     "fine-uploader": "^5.14.4",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
+    "node-uuid": "^1.4.8",
     "prop-types": "^15.5.4",
     "react": "^15.5.3",
     "react-addons-css-transition-group": "^15.5.2",
@@ -31,6 +33,7 @@
     "react-voice-components": "^1.0.0",
     "redux": "^3.6.0",
     "redux-form": "^6.8.0",
+    "redux-persist": "^5.4.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
