--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fine-uploader": "^5.14.4",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
+    "lodash.padleft": "^3.1.3",
     "node-uuid": "^1.4.8",
     "prop-types": "^15.5.4",
     "react": "^15.5.3",
@@ -27,6 +28,8 @@
     "react-dom": "^15.5.3",
     "react-fine-uploader": "^1.0.2",
     "react-fontawesome": "^1.6.1",
+    "react-hotkeys": "^0.10.0",
+    "react-motion": "^0.5.2",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "next",
@@ -34,7 +37,8 @@
     "redux": "^3.6.0",
     "redux-form": "^6.8.0",
     "redux-persist": "^5.4.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "video.js": "^6.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
@@ -45,6 +49,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.27.3",
+    "cssnano": "^3.10.0",
     "eslint": "^3.18.0",
     "eslint-config-react-app": "^0.6.2",
     "eslint-plugin-flowtype": "^2.30.4",
@@ -54,6 +59,11 @@
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-custom-properties": "^6.2.0",
+    "postcss-import": "^11.0.0",
     "postcss-loader": "^1.3.3",
     "react-hot-loader": "3.0.0-beta.6",
     "style-loader": "^0.16.1",
