--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prop-types": "^15.5.4",
     "react": "^15.5.3",
     "react-addons-css-transition-group": "^15.5.2",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-bootstrap": "^0.31.0",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.5.3",
