--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "redux-form": "^6.8.0",
     "redux-persist": "^5.4.0",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "video.js": "^6.4.0"
   },
   "devDependencies": {
