--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fine-uploader": "^5.14.4",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
+    "lodash-decorators": "^4.5.0",
     "lodash.padleft": "^3.1.3",
     "node-uuid": "^1.4.8",
     "prop-types": "^15.5.4",
@@ -46,6 +47,8 @@
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
@@ -76,6 +79,7 @@
     "webpack-merge": "^4.1.0"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "experimentalDecorators": true
   }
 }
